...
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:layout_editor_absoluteX="0dp">

            <!-- Event Name -->
            <EditText
                android:id="@+id/editTextEventName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Event Name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Event Description -->
            <EditText
                android:id="@+id/editTextEventDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Event Description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextEventName" />

            <!-- Registration Start Date and Time -->
            <Button
                android:id="@+id/buttonRegStartDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Select Registration Start Date"
                app:layout_constraintEnd_toStartOf="@id/buttonRegStartTime"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHeight_default="wrap"
                app:layout_constraintTop_toBottomOf="@id/editTextEventDescription" />

            <Button
...
                app:layout_constraintHeight_default="wrap"
                app:layout_constraintStart_toEndOf="@id/buttonRegStartDate"
                app:layout_constraintTop_toBottomOf="@id/editTextEventDescription" />

            <!-- Registration End Date and Time -->
            <Button
                android:id="@+id/buttonRegEndDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Select Registration End Date"
                app:layout_constraintEnd_toStartOf="@id/buttonRegEndTime"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHeight_default="wrap"
                app:layout_constraintTop_toBottomOf="@id/buttonRegStartDate" />

            <Button
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/buttonRegEndDate"
                app:layout_constraintTop_toBottomOf="@id/buttonRegStartTime" />

            <!-- Event Start Date and Time -->
            <Button
                android:id="@+id/buttonEventStartDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Select Event Start Date"
                app:layout_constraintEnd_toStartOf="@id/buttonEventStartTime"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonRegEndDate" />

            <Button
                android:id="@+id/buttonEventStartTime"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/buttonEventStartDate"
                app:layout_constraintTop_toBottomOf="@id/buttonRegEndTime" />

            <!-- Event End Date and Time -->
            <Button
                android:id="@+id/buttonEventEndDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Select Event End Date"
                app:layout_constraintEnd_toStartOf="@id/buttonEventEndTime"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonEventStartDate" />

            <Button
                android:id="@+id/buttonEventEndTime"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/buttonEventEndDate"
                app:layout_constraintTop_toBottomOf="@id/buttonEventStartTime" />

            <!-- Number of Participants -->
            <EditText
                android:id="@+id/editTextMaxNumParticipants"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Max Number of Participants in Waiting List"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonEventEndDate" />

            <!-- Geolocation Required -->
            <CheckBox
                android:id="@+id/checkBoxGeolocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Geolocation Required"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextMaxNumParticipants" />
...
                android:text="Upload Image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkBoxGeolocation" />
            <!-- Create Event Button -->
            <Button
                android:id="@+id/buttonCreateEvent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="Create Event"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
...
